--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@
     <!-- footer -->
     <footer id="footer">
         <ul class="footer_inner">
-            <p>© Umeya. All rights reserved. 本網站為緯育TibaMe前端設計工程師班TFD105期學員專題作品，僅供學習、展示之用。</p>
+            <p>本網站為緯育TibaMe前端設計工程師TFD105班學員專題作品，僅供學習、展示之用。</p>
             <div class="footer_icon">
                 <li><a href="https://zh-tw.facebook.com" target="window name"><i class="fab fa-facebook-f"></i></a>
                 </li>
