--- a/store.html
+++ b/store.html
@@ -119,7 +119,7 @@
         <!-- footer -->
         <footer id="footer">
             <ul class="footer_inner">
-                <p>© Umeya. All rights reserved. 本網站為緯育TibaMe前端設計工程師班TFD105期學員專題作品，僅供學習、展示之用。</p>
+                <p>本網站為緯育TibaMe前端設計工程師TFD105班學員專題作品，僅供學習、展示之用。</p>
                 <div class="footer_icon">
                     <li><a href="https://zh-tw.facebook.com" target="window name"><i class="fab fa-facebook-f"></i></a>
                     </li>
@@ -132,31 +132,30 @@
         <!-- go to top btn -->
         <div>
             <button id="topBtn" onclick="topFunction()" title="Go to top">
-                <i class="far fa-arrow-alt-circle-up"></i>
+                <i class="fas fa-chevron-circle-up"></i>
             </button>
         </div>
+    </div>
 
-        <script>
-            //Get the button
-            mybutton = document.getElementById("topBtn");
-            window.onscroll = function () {
-                scrollFunction()
-            };
+    <script>
+        mybutton = document.getElementById("topBtn"); //Get the button
+        window.onscroll = function () {
+            scrollFunction()
+        };
 
-            // When the user scrolls down 700px from the top of the document, show the button
-            function scrollFunction() {
-                if (document.body.scrollTop > 700 || document.documentElement.scrollTop > 700) {
-                    mybutton.style.display = "block";
-                } else {
-                    mybutton.style.display = "none";
-                }
+        function scrollFunction() {
+            if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
             }
-            // When the user clicks on the button, scroll to the top of the document
-            function topFunction() {
-                document.body.scrollTop = 0;
-                document.documentElement.scrollTop = 0;
-            }
-        </script>
+        }
+
+        function topFunction() {
+            document.body.scrollTop = 0; // for safari
+            document.documentElement.scrollTop = 0; // for chrome
+        }
+    </script>
 </body>
 
 </html>
