--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <li class="index_product_item">
                         <img src="./index/index product/3.png" alt="">
                         <p>威士忌梅酒</p>
-                        <a class="productbtn" href="product.html">View more</a>
+                        <a class="productbtn_1" href="product.html">View more</a>
                     </li>
                     <li class="index_product_item">
                         <img src="./index/index product/4.png" alt="">
@@ -142,6 +142,7 @@
                     <li class="index_product_item">
                         <img src="./index/index product/5.png" alt="">
                         <p>泡盛梅酒</p>
+                        <a class="productbtn_2" href="product.html">View more</a>
                     </li>
                 </ul>
             </div>
