--- a/about.html
+++ b/about.html
@@ -83,9 +83,9 @@
 
         <!-- intro middle -->
         <div class="intro_mid">
-            <div class="intro_mid_pic2">
+            <!-- <div class="intro_mid_pic2">
                 <img src="./About/intro_mid_pic2.jpg" alt="">
-            </div>
+            </div> -->
             <div class="intro_mid_text">
                 <p> 採用全台最大的梅子產地 : 南投信義鄉的梅子, 純天然無添加香料及人工色素, 是最純粹的自然手做。<br><br>
                     經過發酵可以品嘗酸、甘、醇等豐富層次, 台灣土生梅子所釀的梅酒風味獨特, 有明亮的田野梅香, 是專屬台灣的在地佳釀梅酒。
@@ -114,7 +114,7 @@
         <!-- intro end -->
         <div class="intro_end">
             <div class="intro_end_text">
-                <h3>藉由梅屋好酒，度過生活中的美好時刻</h3>
+                <h3>藉由梅屋好酒<br>度過生活中的美好時刻</h3>
             </div>
             <div class="intro_end_pic">
                 <img src="./About/intro_end2.jpg" alt="">
