--- a/about.html
+++ b/about.html
@@ -54,11 +54,10 @@
 
         <!-- Top Banner -->
         <div class="top_banner">
-            <!-- <img src="./About/banner.jpg" alt=""> -->
             <h2>關於梅屋</h2>
         </div>
 
-        <!-- intro -->
+        <!-- intro top -->
         <div class="intro">
             <h3>
                 2020年成立, 使用台灣在地青梅釀造<br>
@@ -66,55 +65,62 @@
             </h3>
         </div>
 
-        <!-- intro top -->
-        <div class="intro_top">
-            <div class="intro_top_pic">
-                <img src="./About/intro_top_pic.jpg" alt="">
-            </div>
-            <div class="intro_top_text">
-                <p> 一期一會的釀梅季。<br><br>
-
-                    每到梅子盛產的季節, 是梅屋最忙碌時候。嚴選台灣在地原料, 再以人工的方式進行一系列釀酒步驟。<br><br>
-
-                    挽起袖子, 將一顆顆梅子化成迷人的美酒, 春天製作梅酒，秋冬用自釀的梅酒與親朋好友一同享用是創辦人最喜歡的時刻。
-                </p>
-            </div>
+        <div class="intro_top_text">
+            <p> 一期一會的釀梅季。<br><br>
+                每到梅子盛產的季節, 是梅屋最忙碌時候。嚴選台灣在地原料, 再以人工的方式進行一系列釀酒步驟。<br><br>
+                春天製作梅酒，秋冬用自釀的梅酒與親朋好友一同享用是創辦人最喜歡的時刻。
+            </p>
         </div>
 
-        <!-- intro middle -->
-        <div class="intro_mid">
-            <!-- <div class="intro_mid_pic2">
-                <img src="./About/intro_mid_pic2.jpg" alt="">
-            </div> -->
-            <div class="intro_mid_text">
-                <p> 採用全台最大的梅子產地 : 南投信義鄉的梅子, 純天然無添加香料及人工色素, 是最純粹的自然手做。<br><br>
-                    經過發酵可以品嘗酸、甘、醇等豐富層次, 台灣土生梅子所釀的梅酒風味獨特, 有明亮的田野梅香, 是專屬台灣的在地佳釀梅酒。
-                </p>
+        <!-- intro middle 圖片 -->
+        <section class="container_all">
+            <div class="container">
+                <img src="./About/1.jpg" alt="UMEYA">
+                <span class="title">採、</span>
             </div>
-            <div class="intro_mid_pic">
-                <img src="./About/intro_mid_pic.jpg" alt="">
+            <div class="container">
+                <img src="./About/2.jpg" alt="UMEYA">
+                <span class="title">選、</span>
             </div>
-        </div>
+            <div class="container">
+                <img src="./About/3.jpg" alt="UMEYA">
+                <span class="title">釀、</span>
+            </div>
+            <div class="container">
+                <img src="./About/4.jpg" alt="UMEYA">
+                <span class="title">飲。</span>
+            </div>
+        </section>
 
-        <!-- intro bottom -->
-        <div class="intro_bottom">
-            <div class="intro_bottom_text">
-                <p>
-                    品嚐一口梅屋梅酒, 那令人醉心的酸甜滋味...<br><br>
-                    梅屋販售多款梅酒, 中山門市更販售許多來自日本的梅酒並提供試飮, 門市人員也也非常樂意分享酒類相關知識,<br><br>
-                    歡迎喜愛梅酒的各位蒞臨,
-                    梅屋期待更多台灣民眾可以喜歡上梅酒的酸甜滋味
-                </p>
-            </div>
-            <div class="intro_bottom_pic">
-                <img src="./About/intro_bottom_pic2.jpg" alt="">
-            </div>
+        <div>
+            <p class="container_text">
+                選用台灣南投信義鄉的梅子, 純天然無添加香料及人工色素, 是最純粹的自然手做。<br><br>
+                台灣土生梅子所釀的梅酒風味獨特, 可以品嘗酸、甘、醇等豐富層次, 是專屬台灣的在地佳釀梅酒。
+            </p>
         </div>
 
         <!-- intro end -->
+        <section class="container_all2">
+            <div class="container2">
+                <img src="./About/5.jpg" alt="UMEYA">
+                <span class="title"></span>
+            </div>
+            <div class="container2">
+                <img src="./About/6.jpg" alt="UMEYA">
+                <span class="title"></span>
+            </div>
+            <p>
+                品嚐一口梅屋梅酒, 那令人醉心的酸甜滋味...<br><br>
+                梅屋販售多款梅酒, 中山門市更販售許多來自日本的梅酒並提供試飮, 門市人員也也非常樂意分享酒類相關知識,<br><br>
+                歡迎喜愛梅酒的各位蒞臨,
+                梅屋期待更多台灣民眾可以喜歡上梅酒的酸甜滋味
+            </p>
+        </section>
+
+        <!-- bottom banner -->
         <div class="intro_end">
             <div class="intro_end_text">
-                <h3>藉由梅屋好酒<br>度過生活中的美好時刻</h3>
+                <h3 class="endtext">藉由梅屋好酒<br>度過生活中的美好時刻</h3>
             </div>
             <div class="intro_end_pic">
                 <img src="./About/intro_end2.jpg" alt="">
