--- a/about.html
+++ b/about.html
@@ -99,32 +99,39 @@
             </p>
         </div>
 
+    
         <!-- intro end -->
-        <section class="container_all2">
-            <div class="container2">
+        <section class="container_all">
+            <div class="container">
                 <img src="./About/5.jpg" alt="UMEYA">
                 <span class="title"></span>
             </div>
-            <div class="container2">
+            <div class="container">
                 <img src="./About/6.jpg" alt="UMEYA">
                 <span class="title"></span>
             </div>
-            <p>
-                品嚐一口梅屋梅酒, 那令人醉心的酸甜滋味...<br><br>
-                梅屋販售多款梅酒, 中山門市更販售許多來自日本的梅酒並提供試飮, 門市人員也也非常樂意分享酒類相關知識,<br><br>
-                歡迎喜愛梅酒的各位蒞臨,
-                梅屋期待更多台灣民眾可以喜歡上梅酒的酸甜滋味
-            </p>
+            <div class="container">
+                <img src="./About/7.jpg" alt="UMEYA">
+                <span class="title"></span>
+            </div>
+            <div class="container">
+                <img src="./About/8.jpg" alt="UMEYA">
+                <span class="title"></span>
+            </div>
         </section>
 
+        <div>
+            <p class="container_text">
+                品嚐一口梅屋梅酒, 那令人醉心的酸甜滋味...<br><br>
+                梅屋販售多款梅酒, 中山門市更販售許多來自日本的梅酒並提供試飮,<br><br>
+                歡迎喜愛梅酒的各位蒞臨,期待更多台灣民眾可以喜歡上梅酒的酸甜滋味
+            </p>
+        </div>
+
         <!-- bottom banner -->
-        <div class="intro_end">
-            <div class="intro_end_text">
-                <h3 class="endtext">藉由梅屋好酒<br>度過生活中的美好時刻</h3>
-            </div>
-            <div class="intro_end_pic">
-                <img src="./About/intro_end2.jpg" alt="">
-            </div>
+        <div class="endBanner">
+            <h3 style="text-align: center;">藉由梅屋好酒度過生活中的美好時刻</h3>
+            <img src="./About/intro_end1400.jpg" alt="">
         </div>
 
         <!-- 酒後不開車聲明 -->
