--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
         <!-- bottom banner -->
         <div class="endBanner">
             <h3 style="text-align: center;">藉由梅屋好酒度過生活中的美好時刻</h3>
-            <img src="./About/intro_end1400.jpg" alt="">
+            <img src="/About/intro_end1400.jpg" alt="">
         </div>
 
         <!-- 酒後不開車聲明 -->
