--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             navMenu.classList.remove("active");
         }
     </script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
 
 </html>
