--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
             </p>
         </div>
 
-    
+
         <!-- intro end -->
         <section class="container_all">
             <div class="container">
@@ -130,8 +130,10 @@
 
         <!-- bottom banner -->
         <div class="endBanner">
-            <h3 style="text-align: center;">藉由梅屋好酒度過生活中的美好時刻</h3>
-            <img src="/About/intro_end1400.jpg" alt="">
+            <h3>藉由梅屋好酒度過生活中的美好時刻</h3>
+            <div class="endimg">
+                <img  src="/About/intro_end1400.jpg" alt="">
+            </div>
         </div>
 
         <!-- 酒後不開車聲明 -->
@@ -177,7 +179,7 @@
             document.documentElement.scrollTop = 0; // for chrome
         }
     </script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
 
 </html>
