--- a/about.html
+++ b/about.html
@@ -130,10 +130,9 @@
 
         <!-- bottom banner -->
         <div class="endBanner">
-            <h3>藉由梅屋好酒度過生活中的美好時刻</h3>
-            <div class="endimg">
-                <img  src="/About/intro_end1400.jpg" alt="">
-            </div>
+            <h3>藉由梅屋好酒度過生活中美好時刻</h3>
+            <img  src="/About/intro_end1400.jpg" alt="">
+            <a href="product.html">看梅屋產品</a>
         </div>
 
         <!-- 酒後不開車聲明 -->
