--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
         <!-- bottom banner -->
         <div class="endBanner">
             <h3>藉由梅屋好酒度過生活中美好時刻</h3>
-            <img  src="/About/intro_end1400.jpg" alt="">
+            <img src="./About/intro_end1400.jpg" alt="">
             <a href="product.html">看梅屋產品</a>
         </div>
 
