--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>梅屋 UMEYA</title>
+    <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="./css/newNavandFooter.css">
     <link rel="stylesheet" href="./css/about_style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -179,6 +180,7 @@
         }
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
