--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>梅屋 UMEYA</title>
-    <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap-grid.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/newNavandFooter.css">
     <link rel="stylesheet" href="./css/about_style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -74,22 +74,25 @@
         </div>
 
         <!-- intro middle 圖片 -->
-        <section class="container_all">
-            <div class="container">
-                <img src="./About/1.jpg" alt="UMEYA">
+
+        <section class="container">
+            <div class="row">
+                <div class="pic col-md-3 col-sm-6 col-6">
+                    <img src="./About/1.jpg" alt="UMEYA">
                 <span class="title">採、</span>
-            </div>
-            <div class="container">
-                <img src="./About/2.jpg" alt="UMEYA">
+                </div>
+                <div class="pic col-md-3 col-sm-6 col-6">
+                    <img src="./About/2.jpg" alt="UMEYA">
                 <span class="title">選、</span>
-            </div>
-            <div class="container">
-                <img src="./About/3.jpg" alt="UMEYA">
+                </div>
+                <div class="pic col-md-3 col-sm-6 col-6">
+                    <img src="./About/3.jpg" alt="UMEYA">
                 <span class="title">釀、</span>
-            </div>
-            <div class="container">
-                <img src="./About/4.jpg" alt="UMEYA">
+                </div>
+                <div class="pic col-md-3 col-sm-6 col-6">
+                    <img src="./About/4.jpg" alt="UMEYA">
                 <span class="title">飲。</span>
+                </div>
             </div>
         </section>
 
@@ -100,24 +103,25 @@
             </p>
         </div>
 
-
         <!-- intro end -->
-        <section class="container_all">
-            <div class="container">
-                <img src="./About/5.jpg" alt="UMEYA">
-                <span class="title"></span>
-            </div>
-            <div class="container">
-                <img src="./About/6.jpg" alt="UMEYA">
-                <span class="title"></span>
-            </div>
-            <div class="container">
-                <img src="./About/7.jpg" alt="UMEYA">
-                <span class="title"></span>
-            </div>
-            <div class="container">
-                <img src="./About/8.jpg" alt="UMEYA">
-                <span class="title"></span>
+        <section class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6 col-6">
+                    <img src="./About/5.jpg" alt="UMEYA">
+                    <span class="title"></span>
+                </div>
+                <div class="col-md-3 col-sm-6 col-6">
+                    <img src="./About/6.jpg" alt="UMEYA">
+                    <span class="title"></span>
+                </div>
+                <div class="col-md-3 col-sm-6 col-6">
+                    <img src="./About/7.jpg" alt="UMEYA">
+                    <span class="title"></span>
+                </div>
+                <div class="col-md-3 col-sm-6 col-6">
+                    <img src="./About/8.jpg" alt="UMEYA">
+                    <span class="title"></span>
+                </div>
             </div>
         </section>
 
@@ -180,7 +184,7 @@
         }
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
