--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>梅屋 UMEYA</title>
     <link rel="stylesheet" href="./css/newNavandFooter.css">
-
     <link rel="stylesheet" href="./css/index_style.css">
+    <link rel="stylesheet" href="./css/ham.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -22,47 +22,6 @@
 
 <body>
     <div id="wrap">
-        <!-- 舊導覽列 -->
-        <!--  
-        <nav id="header">
-            <div class="header_logo">
-                <a href="index.html"><img src="./Logo/main logo.svg" alt=""></a>
-            </div>
-
-            <div class="header_list">
-                <ul>
-                    <li class="header_list_item">
-                        <a href="about.html">關於梅屋<br>ABOUT US</a>
-                    </li>
-                    <li>
-                        <a href="product.html">商品一覽<br>PRODUCTS</a>
-                    </li>
-                    <li>
-                        <a href="bar.html">品梅吧<br>UME BAR</a>
-                    </li>
-                    <li>
-                        <a href="store.html">梅屋商店<br>OUR STORE</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">聯絡我們<br>CONTACT US</a>
-                    </li>
-
-                    <a href="javascript:void(0);" class="burgar_btn" onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
-                    </a>
-                </ul>
-
-                    <div class="header_icon">
-                        <li>
-                            <a href="login.html"><i class="fas fa-user"></i></a>
-                        </li>
-                        <li>
-                            <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
-                        </li>
-                    </div>
-            </div>
-        </nav> -->
-
         <!-- 新導覽列 -->
         <nav class="header">
             <div class="logo">
@@ -89,14 +48,13 @@
             <div class="header_icon">
                 <a href="login.html"><i class="fas fa-user"></i></a>
                 <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
-
-                <a href="#" class="showmenu" id="NavBtn">
-                    <i class="fa fa-bars"></i></a>
-
-                <a href="#" class="nav_btn nav_close js-none" id="NavClose">
-                    <i class="fa-solid fa-xmark"></i>
-                </a>
             </div>
+
+            <button class="hamburger hamburger--squeeze is active" type="button">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
         </nav>
 
         <!-- Top Banner -->
@@ -194,7 +152,7 @@
         </div>
     </div>
 
-    <script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
         // go back to top btn
         mybutton = document.getElementById("topBtn"); //Get the button
         window.onscroll = function () {
@@ -214,25 +172,28 @@
             document.documentElement.scrollTop = 0; // for chrome
         }
 
-        // hamberger btn
-        const hamburger = document.querySelector(".showmenu");
-        const navMenu = document.querySelector(".menu");
-        const navLink = document.querySelectorAll(".nav-link");
+        // hambergur btn
+        // jQuery 版本
+        $(function () {
 
-        hamburger.addEventListener("click", mobileMenu);
-        navLink.forEach(n => n.addEventListener("click", closeMenu));
+            $("button.hamburger").on("click", function () {
+                $(this).toggleClass("is-active");
+            });
 
-        function mobileMenu() {
-            hamburger.classList.toggle("active");
-            navMenu.classList.toggle("active");
-        }
+        });
 
-        function closeMenu() {
-            hamburger.classList.remove("active");
-            navMenu.classList.remove("active");
-        }
+
+        // JavaScript 版本
+        document.addEventListener("DOMContentLoaded", function () {
+
+            var btn_hamburger = document.getElementsByClassName("hamburger")[0];
+            btn_hamburger.addEventListener("click", function () {
+                this.classList.toggle("is-active");
+            });
+
+        });
     </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </body>
 
 </html>
