--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
             <div class="indext_product_pic">
                 <ul class="index_product_list">
-                    <li>
-                        <img src="./index/index product/1.png" alt="">
+                    <li class="index_product_item">
+                        <img class="item1" src="./Product/Product pic/product-2.png" alt="">
                         <p>手工酒梅</p>
                     </li>
                     <li class="index_product_item">
