--- a/product.html
+++ b/product.html
@@ -69,7 +69,7 @@
             <ul class="productListInner">
                 <li class="productListInnerText">
                     <a href="#">
-                        <img src="./index/index product/1.png" alt="">
+                        <img src="./Product/Product pic/product-2.png" alt="">
                         <p class="productTitle">手工酒梅</p>
                         <i class="fas fa-angle-double-down"></i>
                     </a>
@@ -332,7 +332,7 @@
                 </div>
             </div>
         </div>
-        
+
         <!-- 推薦喝法 -->
         <div class="recommand">
             <h3>推薦喝法</h3>
