--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
             <h3>會員登入 / 註冊</h3>
         </div>
         <div class="loginMain">
-            <input type="text" placeholder="請輸入註冊Email" size="50">
+            <input type="email" placeholder="請輸入註冊Email" size="50">
             <input type="text" placeholder="請輸入密碼" size="30">
             <button type="submit">登入</button>
             <a href="signin.html"><button type="submit">註冊</button></a>
@@ -66,7 +66,7 @@
         <hr class="divider">
         <div class="forgetPasswd">
             <h3>忘記密碼</h3>
-            <input type="text" placeholder="請輸入註冊Email" size="50">
+            <input type="email" placeholder="請輸入註冊Email" size="50">
             <button type="submit">送出</button>
         </div>
     </section>
