--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
+    <script>
         // go back to top btn
         mybutton = document.getElementById("topBtn"); //Get the button
         window.onscroll = function () {
