--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
             </div>
 
-            <button class="hamburger hamburger--squeeze is active" type="button">
+            <!-- <button class="hamburger hamburger--squeeze is active" type="button">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
                 </span>
-            </button>
+            </button> -->
         </nav>
 
         <!-- Top Banner -->
