--- a/about.html
+++ b/about.html
@@ -21,27 +21,26 @@
 </head>
 
 <body>
-    <div class="wrap">
-
-        <!-- 導覽列 -->
+    <div id="wrap">
+        <!-- 新導覽列 -->
         <nav class="header">
             <div class="logo">
                 <a href="index.html"><img src="./Logo/main logo.svg" alt=""></a>
             </div>
-            <ul class="menu">
-                <li class="menu_list">
+            <ul class="menu" id="NavBody">
+                <li class="nav_items">
                     <a href="about.html">關於梅屋<br>ABOUT US</a>
                 </li>
-                <li>
+                <li class="nav_items">
                     <a href="product.html">商品一覽<br>PRODUCTS</a>
                 </li>
-                <li>
+                <li class="nav_items">
                     <a href="bar.html">品梅吧<br>UME BAR</a>
                 </li>
-                <li>
+                <li class="nav_items">
                     <a href="store.html">梅屋商店<br>OUR STORE</a>
                 </li>
-                <li>
+                <li class="nav_items">
                     <a href="contact.html">聯絡我們<br>CONTACT US</a>
                 </li>
             </ul>
@@ -49,8 +48,13 @@
             <div class="header_icon">
                 <a href="login.html"><i class="fas fa-user"></i></a>
                 <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
-                <a href="#" class="showmenu"><i class="fa fa-bars"></i></a>
             </div>
+
+            <!-- <button class="hamburger hamburger--squeeze is active" type="button">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button> -->
         </nav>
 
         <!-- Top Banner -->
