--- a/bar.html
+++ b/bar.html
@@ -8,6 +8,8 @@
     <title>梅屋 UMEYA</title>
     <link rel="stylesheet" href="./css/newNavandFooter.css">
     <link rel="stylesheet" href="./css/bar_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -71,58 +73,23 @@
         </div>
 
         <!-- world class vedio -->
-        <div class='embed-container'><iframe src='https://www.youtube.com/embed/-QEh1VzrxhA?rel=0&hd=1&autoplay=1&loop=1&playlist=-QEh1VzrxhA' allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <div class='embed-container'>
+            <iframe src='https://www.youtube.com/embed/-QEh1VzrxhA?rel=0&autoplay=1&loop=1&playlist=-QEh1VzrxhA'
+                frameborder=”0″ allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
 
-        <!-- 世界級調酒師 -->
-        <!-- <div class="bartenderIntro">
-            <div class="bartenderpic">
-                <img src="./Bar/bartenderlt.jpg" alt="">
-                <p>Darren Duan</p>
-            </div>
-            <div class="bartenderpic">
-                <img src="./Bar/bartenderrt.jpg" alt="">
-                <p>Jillian Chuang</p>
-            </div>
-            <div class="bartenderpic">
-                <img src="./Bar/bartender.jpg" alt="">
-                <p>Tess de Vries</p>
-            </div>
-        </div> -->
-
-        <!-- 調酒圖片區 -->
+        <!-- 調酒圖片輪播區 -->
         <div class="cocktail">
             <h3>梅屋精釀梅酒與琳琅滿目的酒品</h3>
+        </div>
 
-            <div class="cocktaillist">
-                <ul>
-                    <li class="c1">
-                        <p>Old Fashioned<br><br>
-                            梅酒<br>方糖<br>苦精<br>
-                        </p>
-                    </li>
-                    <li class="c2">
-                        <p>Daiquiri<br><br>
-                            梅酒<br>蘭姆酒<br>檸檬汁<br>
-                        </p>
-                    </li>
-                    <li class="c3">
-                        <p>Ume Sour<br><br>
-                            梅酒<br>薄荷<br>砂糖<br>氣泡水
-                        </p>
-                    </li>
-                    <li class="c4">
-                        <p>Manhattan<br><br>
-                            威士忌梅酒<br>苦精<br>甜苦艾酒<br>
-                        </p>
-                    </li>
-                    <li class="c5">
-                        <p>Ume Sour<br><br>
-                            梅酒<br>檸檬汁<br>糖漿<br>
-                        </p>
-                    </li>
-                </ul>
-            </div>
+        <div class="variable slider">
+            <div><img src="./Bar/cocktail/cocktail (3).png" alt=""></div>
+            <div><img src="./Bar/cocktail/cocktail (4).png" alt=""></div>
+            <div><img src="./Bar/cocktail/cocktail (5).png" alt=""></div>
+            <div><img src="./Bar/cocktail/cocktail (6).png" alt=""></div>
+            <div><img src="./Bar/cocktail/cocktail (7).png" alt=""></div>
+            <div><img src="./Bar/cocktail/cocktail (8).png" alt=""></div>
         </div>
 
 
@@ -162,6 +129,54 @@
         </div>
     </div>
 
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
+
+    <script>
+        $(document).on('ready', function () {
+            $(".variable").slick({
+                arrows: true,
+                dots: true,
+                infinite: false,
+                speed: 300,
+                slidesToShow: 4,
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 3000,
+                responsive: [
+                    {
+                        breakpoint: 1024,
+                        settings: {
+                            slidesToShow: 3,
+                            slidesToScroll: 1,
+                            infinite: true,
+                            dots: true
+                        }
+                    },
+                    {
+                        breakpoint: 768,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 1
+                        }
+                    },
+                    {
+                        breakpoint: 576,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1
+                        }
+                    }
+                ]
+            });
+
+        });
+    </script>
+
+
+    <!-- go back to top btn -->
     <script>
         mybutton = document.getElementById("topBtn"); //Get the button
         window.onscroll = function () {
@@ -181,6 +196,7 @@
             document.documentElement.scrollTop = 0; // for chrome
         }
     </script>
+
 </body>
 
 </html>
