--- a/store.html
+++ b/store.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>梅屋 UMEYA</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/newNavandFooter.css">
     <link rel="stylesheet" href="./css/store_style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,25 +22,25 @@
 
 <body>
     <div id="wrap">
-        <!-- 導覽列 -->
+        <!-- 新導覽列 -->
         <nav class="header">
             <div class="logo">
                 <a href="index.html"><img src="./Logo/main logo.svg" alt=""></a>
             </div>
-            <ul class="menu">
-                <li class="menu_list">
+            <ul class="menu" id="NavBody">
+                <li class="nav_items">
                     <a href="about.html">關於梅屋<br>ABOUT US</a>
                 </li>
-                <li>
+                <li class="nav_items">
                     <a href="product.html">商品一覽<br>PRODUCTS</a>
                 </li>
-                <li>
+                <li class="nav_items">
                     <a href="bar.html">品梅吧<br>UME BAR</a>
                 </li>
-                <li>
+                <li class="nav_items">
                     <a href="store.html">梅屋商店<br>OUR STORE</a>
                 </li>
-                <li>
+                <li class="nav_items">
                     <a href="contact.html">聯絡我們<br>CONTACT US</a>
                 </li>
             </ul>
@@ -47,8 +48,13 @@
             <div class="header_icon">
                 <a href="login.html"><i class="fas fa-user"></i></a>
                 <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
-                <a href="#" class="showmenu"><i class="fa fa-bars"></i></a>
             </div>
+
+            <!-- <button class="hamburger hamburger--squeeze is active" type="button">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button> -->
         </nav>
 
         <!-- Top Banner -->
@@ -65,41 +71,34 @@
         </div>
 
         <!-- storeitem -->
-
-        <div class="storeItem">
-            <ul>
-                <li class="s1">
-                    <p>手工醉梅<br>Ume</p>
-                </li>
-                <li class="s2">
-                    <p>威士忌梅酒<br>Ume Whisky</p>
-                </li>
-                <li class="s3"></li>
-            </ul>
-            <ul>
-                <li class="s4">
-                    <p>泡盛梅酒<br>Ume Awamori</p>
-                </li>
-                <li class="s5">
-                    <p>清酒梅酒<br>Ume Sake</p>
-                </li>
-                <li class="s6">
-                    <p>燒酌梅酒<br>Ume Shochu</p>
-                </li>
-            </ul>
-            <ul>
-                <li class="s7">
-                    <p>梅屋 No.7<br>Ume No.7</p>
-                </li>
-                <li class="s8">
-                    <p>梅屋 No.8<br>Ume No.8</p>
-                </li>
-                <li class="s9">
-                    <p>找更多梅酒<br>歡迎光臨梅屋商店</p>
-                    <i class="fas fa-angle-double-down"></i>
-                </li>
-            </ul>
-        </div>
+        <section class="container">
+            <div class="row">
+                <div class="pic col-md-6 col-lg-6 col-xl-4">
+                    <img src="./Store/1-100.jpg" alt="">
+                    <span class="title1">手工醉梅<br>Ume</span>
+                </div>
+                <div class="pic col-md-6 col-lg-6 col-xl-4">
+                    <img src="./Store/9-100.jpg" alt="">
+                    <span class="title2">威士忌梅酒<br>Ume Whisky</span>
+                </div>
+                <div class="pic col-md-6 col-lg-6 col-xl-4">
+                    <img src="./Store/16-100.jpg" alt="">
+                    <span class="title3"></span>
+                </div>
+                <div class="pic col-md-6 col-lg-6 col-xl-4">
+                    <img src="./Store/2-100.jpg" alt="">
+                    <span class="title3">泡盛梅酒<br>Ume Awamori</span>
+                </div>
+                <div class="pic col-md-6 col-lg-6 col-xl-4">
+                    <img src="./Store/7-100.jpg" alt="">
+                    <span class="title4">清酒梅酒<br>Ume Sake</span>
+                </div>
+                <div class="pic col-md-6 col-lg-6 col-xl-4">
+                    <img src="./Store/33-100.jpg" alt="">
+                    <span class="title5">找更多梅酒<br>歡迎光臨梅屋商店</span>
+                </div>
+            </div>  
+        </section>
 
         <!-- 地址位置圖 -->
         <div class="storeadd">
