--- a/about.html
+++ b/about.html
@@ -137,11 +137,13 @@
             </p>
         </div>
 
-        <!-- bottom banner -->
+        <!-- END banner -->
         <div class="endBanner">
             <h3>藉由梅屋好酒度過生活中美好時刻</h3>
             <img src="./About/intro_end1400.jpg" alt="">
-            <a href="product.html">看梅屋產品</a>
+            <div class="endbtn">
+                <a href="product.html">看梅屋產品</a>
+            </div>
         </div>
 
         <!-- 酒後不開車聲明 -->
