--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
         </div>
         <div class="loginMain">
             <input type="email" placeholder="請輸入註冊Email" size="50">
-            <input type="text" placeholder="請輸入密碼" size="30">
+            <input type="password" placeholder="請輸入密碼" size="30">
             <button type="submit">登入</button>
             <a href="signin.html"><button type="submit">註冊</button></a>
         </div>
