--- a/bar.html
+++ b/bar.html
@@ -8,6 +8,7 @@
     <title>梅屋 UMEYA</title>
     <link rel="stylesheet" href="./css/newNavandFooter.css">
     <link rel="stylesheet" href="./css/bar_style.css">
+    <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,8 +48,33 @@
             </ul>
 
             <div class="header_icon">
-                <a href="login.html"><i class="fas fa-user"></i></a>
+                <a id="myBtn" href="#"><i class="fas fa-user"></i></a>
                 <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
+            </div>
+
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <div class="loginHead">
+                        <h3>會員登入 / 註冊</h3>
+                    </div>
+                    <div class="loginMain">
+                        <input type="email" placeholder="請輸入註冊Email" size="50">
+                        <br>
+                        <input type="password" placeholder="請輸入密碼" size="30">
+                        <br>
+                        <button type="submit">登入</button>
+                        <a href="signin.html"><button type="submit">註冊</button></a>
+                    </div>
+                    <hr class="divider">
+                    <div class="forgetPasswd">
+                        <h3>忘記密碼</h3>
+                        <input type="email" placeholder="請輸入註冊Email" size="50">
+                        <br>
+                        <button type="submit">送出</button>
+                    </div>
+                </div>
             </div>
 
             <!-- <button class="hamburger hamburger--squeeze is active" type="button">
@@ -144,7 +170,8 @@
                 slidesToShow: 4,
                 slidesToScroll: 1,
                 autoplay: true,
-                autoplaySpeed: 3000,
+                autoplaySpeed: 2000,
+                infinite: true,
                 responsive: [
                     {
                         breakpoint: 1024,
@@ -194,6 +221,26 @@
         function topFunction() {
             document.body.scrollTop = 0; // for safari
             document.documentElement.scrollTop = 0; // for chrome
+        }
+    </script>
+
+    <script>
+        // modal box
+        var modal = document.getElementById("myModal");
+        var btn = document.getElementById("myBtn");
+        var span = document.getElementsByClassName("close")[0];
+        btn.onclick = function () {
+            modal.style.display = "block";
+        }
+
+        span.onclick = function () {
+            modal.style.display = "none";
+        }
+
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
         }
     </script>
 
