--- a/store.html
+++ b/store.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/newNavandFooter.css">
     <link rel="stylesheet" href="./css/store_style.css">
+    <link rel="stylesheet" href="./css/login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -46,8 +47,33 @@
             </ul>
 
             <div class="header_icon">
-                <a href="login.html"><i class="fas fa-user"></i></a>
+                <a id="myBtn" href="#"><i class="fas fa-user"></i></a>
                 <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
+            </div>
+
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <div class="loginHead">
+                        <h3>會員登入 / 註冊</h3>
+                    </div>
+                    <div class="loginMain">
+                        <input type="email" placeholder="請輸入註冊Email" size="50">
+                        <br>
+                        <input type="password" placeholder="請輸入密碼" size="30">
+                        <br>
+                        <button type="submit">登入</button>
+                        <a href="signin.html"><button type="submit">註冊</button></a>
+                    </div>
+                    <hr class="divider">
+                    <div class="forgetPasswd">
+                        <h3>忘記密碼</h3>
+                        <input type="email" placeholder="請輸入註冊Email" size="50">
+                        <br>
+                        <button type="submit">送出</button>
+                    </div>
+                </div>
             </div>
 
             <!-- <button class="hamburger hamburger--squeeze is active" type="button">
@@ -97,7 +123,7 @@
                     <img src="./Store/33-100.jpg" alt="">
                     <span class="title5">找更多梅酒<br>歡迎光臨梅屋商店</span>
                 </div>
-            </div>  
+            </div>
         </section>
 
         <!-- 地址位置圖 -->
@@ -153,6 +179,26 @@
         function topFunction() {
             document.body.scrollTop = 0; // for safari
             document.documentElement.scrollTop = 0; // for chrome
+        }
+    </script>
+
+    <script>
+        // modal box
+        var modal = document.getElementById("myModal");
+        var btn = document.getElementById("myBtn");
+        var span = document.getElementsByClassName("close")[0];
+        btn.onclick = function () {
+            modal.style.display = "block";
+        }
+
+        span.onclick = function () {
+            modal.style.display = "none";
+        }
+
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
         }
     </script>
 </body>
